--- a/index.html
+++ b/index.html
@@ -15,6 +15,13 @@
                 <img src="IMG_4538.jpg" alt="Abhishek Singh" class="profile-pic">
                 <h1>ABHISHEK SINGH</h1>
                 <p>Machine Learning & AI Engineer</p>
+                <p class="bio">"Passionate about harnessing the power of AI to drive innovation and solve real-world problems."</p>
+                <div class="links">
+                    <a href="https://www.linkedin.com/in/abhishek-singh" target="_blank">LinkedIn</a>
+                    <a href="https://github.com/abhishek-singh" target="_blank">GitHub</a>
+                    <a href="https://huggingface.co/your-profile" target="_blank">Hugging Face</a>
+                    <a href="https://your-website.com" target="_blank">Website</a>
+                </div>
             </div>
         </div>
 
