--- a/index.html
+++ b/index.html
@@ -17,10 +17,9 @@
                 <p>Machine Learning & AI Engineer</p>
                 <p class="bio">"Passionate about harnessing the power of AI to drive innovation and solve real-world problems."</p>
                 <div class="links">
-                    <a href="https://www.linkedin.com/in/abhishek-singh" target="_blank">LinkedIn</a>
-                    <a href="https://github.com/abhishek-singh" target="_blank">GitHub</a>
-                    <a href="https://huggingface.co/your-profile" target="_blank">Hugging Face</a>
-                    <a href="https://your-website.com" target="_blank">Website</a>
+                    <a href="https://www.linkedin.com/in/abhishekk5ingh" target="_blank">LinkedIn</a>
+                    <a href="https://github.com/Abhi5ingh" target="_blank">GitHub</a>
+                    <a href="https://huggingface.co/Abhi5ingh" target="_blank">Hugging Face</a>
                 </div>
             </div>
         </div>
@@ -41,7 +40,20 @@
             <h2>About Me</h2>
             <p>I am a Machine Learning enthusiast with a keen interest in Generative modelling applications. I have a master's degree in Machine Learning and Computer Vision, and I am currently working at a Bioscience pharmaceutical company in Singapore as an Applied AI Engineer for novel drug discovery for Cancer and Autoimmune disease treatments.</p>
         </section>
-
+        <section id = "showcase">
+            <h2> Current Works: AI based Drug Engineering</h2>
+            <p> Using Generative models for denovo drug synthesis and discovery using models like Diffusion based models and LLMs.</p>
+            <img src = "XXXX_camera-spin.mp4">
+            <button id="more-info-btn">Learn More</button>
+        </section>
+        <div id="showcase-modal" class="modal">
+            <div class="modal-content">
+                <span class="close-btn">&times;</span>
+                <h3>Showcase Details</h3>
+                <p> In this amazing 6 month experience in Singapore i got to dive deeper in the Bioinformatics and Microbiology and combine it with my AI/ML knowledge to work on the novel and revolutionary task of using AI models like Diffusion based models-RFDiffusion and Large Language models like ESM3,ProBert for the tasks of new Antibody synthesis.</p>
+                <img src="XXXX_camera-spin.mp4" alt="Detailed Video">
+            </div>
+        </div>
         <section id="experience">
             <h2>Experience</h2>
             <h3>AI Drug Discovery, Hummingbird Bioscience</h3>
