--- a/index.html
+++ b/index.html
@@ -43,7 +43,11 @@
         <section id = "showcase">
             <h2> Current Works: AI based Drug Engineering</h2>
             <p> Using Generative models for denovo drug synthesis and discovery using models like Diffusion based models and LLMs.</p>
-            <img src = "XXXX_camera-spin.mp4">
+            <video controls>
+                <source src ="XXXX_camera-spin.mp4" type="video/mp4">
+            </video>
+                
+           
             <button id="more-info-btn">Learn More</button>
         </section>
         <div id="showcase-modal" class="modal">
@@ -51,7 +55,9 @@
                 <span class="close-btn">&times;</span>
                 <h3>Showcase Details</h3>
                 <p> In this amazing 6 month experience in Singapore i got to dive deeper in the Bioinformatics and Microbiology and combine it with my AI/ML knowledge to work on the novel and revolutionary task of using AI models like Diffusion based models-RFDiffusion and Large Language models like ESM3,ProBert for the tasks of new Antibody synthesis.</p>
-                <img src="XXXX_camera-spin.mp4" alt="Detailed Video">
+                <video controls>
+                    <source src ="XXXX_camera-spin.mp4" type="video/mp4">
+                </video>
             </div>
         </div>
         <section id="experience">
