--- a/index.html
+++ b/index.html
@@ -90,10 +90,10 @@
 
         <section id="contact">
             <h2>Contact Me</h2>
-            <p>Email: <a href="mailto:your.email@example.com">your.email@example.com</a></p>
-            <p>LinkedIn: <a href="https://www.linkedin.com/in/abhishek-singh" target="_blank">LinkedIn Profile</a></p>
-            <p>GitHub: <a href="https://github.com/abhishek-singh" target="_blank">GitHub Profile</a></p>
-            <p>Download Resume: <a href="resume.pdf" target="_blank">Click here to download</a></p>
+            <p>Email: <a href="mailto:abhisteak@gmail.com">abhisteak@gmail.com</a></p>
+            <p>LinkedIn: <a href="https://www.linkedin.com/in/abhishekk5ingh" target="_blank">LinkedIn Profile</a></p>
+            <p>GitHub: <a href="https://github.com/Abhi5ingh" target="_blank">GitHub Profile</a></p>
+            <p>Download Resume: <a href="Resume" target="_blank">Click here to download</a></p>
         </section>
 
         <footer>
