--- a/index.html
+++ b/index.html
@@ -77,7 +77,8 @@
 
         <section id="projects">
             <h2>Projects</h2>
-            <h3></h3>
+            <h3>Fashion Garment Synthesis using Diffusion Models</h3>
+            <p> The Fashion industry is one of the old traditional industries that have a shown massive amounts of reluctance to change and adapt to the changing tides brought by Artificial Intelligence and Technlogy. I decided to help reduce the burdens of Fashion designers by creating a tool using stable diffusion model to create any number of fashion garment,t-shirts,dresses using just a simple text-prompt or a sketch. </p>
         </section>
 
         <section id="education">
