--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             <p>Email: <a href="mailto:abhisteak@gmail.com">abhisteak@gmail.com</a></p>
             <p>LinkedIn: <a href="https://www.linkedin.com/in/abhishekk5ingh" target="_blank">LinkedIn Profile</a></p>
             <p>GitHub: <a href="https://github.com/Abhi5ingh" target="_blank">GitHub Profile</a></p>
-            <p>Download Resume: <a href="Resume" target="_blank">Click here to download</a></p>
+            <p>Download Resume: <a href="Abhishek_Singh_M.pdf" target="_blank">Click here to download</a></p>
         </section>
 
         <footer>
