--- a/index.html
+++ b/index.html
@@ -55,9 +55,7 @@
                 <span class="close-btn">&times;</span>
                 <h3>Showcase Details</h3>
                 <p> In this amazing 6 month experience in Singapore i got to dive deeper in the Bioinformatics and Microbiology and combine it with my AI/ML knowledge to work on the novel and revolutionary task of using AI models like Diffusion based models-RFDiffusion and Large Language models like ESM3,ProBert for the tasks of new Antibody synthesis.</p>
-                <video controls>
-                    <source src ="XXXX_camera-spin.mp4" type="video/mp4">
-                </video>
+                <img src="prot.gif" alt="Detailed GIF">
             </div>
         </div>
         <section id="experience">
