--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
         <section id="about">
             <h2>About Me</h2>
             <p>I am a Machine Learning enthusiast with a keen interest in Generative modelling applications. I have a master's degree in Machine Learning and Computer Vision, and I am currently working at a Bioscience pharmaceutical company in Singapore as an Applied AI Engineer for novel drug discovery for Cancer and Autoimmune disease treatments.</p>
+            <p> This work made me be able to master working on an HPC,Linux environment, get more proficient in python/pytorch and be able to fine tune Large models for our Applied applications.</p>
         </section>
         <section id = "showcase">
             <h2> Current Works: AI based Drug Engineering</h2>
@@ -77,6 +78,15 @@
             <h2>Projects</h2>
             <h3>Fashion Garment Synthesis using Diffusion Models</h3>
             <p> The Fashion industry is one of the old traditional industries that have a shown massive amounts of reluctance to change and adapt to the changing tides brought by Artificial Intelligence and Technlogy. I decided to help reduce the burdens of Fashion designers by creating a tool using stable diffusion model to create any number of fashion garment,t-shirts,dresses using just a simple text-prompt or a sketch. </p>
+            <p>You can read the full research paper <a href="https://arxiv.org/abs/2404.18591" target="_blank">here</a>.</p>
+            <!-- Image -->
+            <img src="ss.png" alt="Fashion Garment Results" class="project-image">
+            <!-- Video -->
+            <video width="100%" controls autoplay loop>
+                <source src="sd.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+            </video>
+            <p>You can use the model here <a href="https://huggingface.co/spaces/Abhi5ingh/fashionsd" target="_blank">here</a>.</p>
         </section>
 
         <section id="education">
