--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <section id = "showcase">
             <h2> Current Works: AI based Drug Engineering</h2>
             <p> Using Generative models for denovo drug synthesis and discovery using models like Diffusion based models and LLMs.</p>
-            <video controls>
+            <video controls autoplay loop>
                 <source src ="XXXX_camera-spin.mp4" type="video/mp4">
             </video>
                 
