--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <section id = "showcase">
             <h2> Current Works: AI based Drug Engineering</h2>
             <p> Using Generative models for denovo drug synthesis and discovery using models like Diffusion based models and LLMs.</p>
-            <video controls autoplay loop>
+            <video controls autoplay loop muted>
                 <source src ="XXXX_camera-spin.mp4" type="video/mp4">
             </video>
                 
@@ -82,7 +82,7 @@
             <!-- Image -->
             <img src="ss.png" alt="Fashion Garment Results" class="project-image">
             <!-- Video -->
-            <video width="100%" controls autoplay loop>
+            <video width="100%" controls autoplay loop muted>
                 <source src="sd.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
